examples/test/testpolicy3006.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3006
  namespace: namespace39
spec:
  podSelector:
    matchLabels:
      key2: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value6
          key28: value33
      podSelector:
        matchLabels:
          key5: value44
          key15: value23
